fix scrollbar bg

--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -351,26 +351,26 @@ section table {
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--background);
+  background: #181b26;
   border-radius: var(--border-radius-medium);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #3c445a;
-  border: 4px solid var(--background);
+  background-color: #2b3244;
+  border: 3px solid #181b26;
   border-radius: var(--border-radius-medium);
   transition: background-color var(--transition-fast);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #4e5a76;
+  background-color: #40485c;
 }
 
 ::-webkit-scrollbar-corner {
-  background: var(--background);
+  background: #181b26;
 }
 
 * {
-  scrollbar-width: auto;
-  scrollbar-color: #3c445a var(--background);
+  scrollbar-width: thin;
+  scrollbar-color: #2b3244 #181b26;
 }
